--- a/gp_calibration_questions.tex
+++ b/gp_calibration_questions.tex
@@ -339,8 +339,13 @@ accept-reject step. An alternative approach to incorporating uncertainty that is
 interpolation uncertainty. Noting that the below expectation is with respect to the Gaussian distribution of $\hat{T}(x, z, u)$, we obtain 
 \[\E \left[\tau^{n/2} \exp\left\{-\frac{\tau}{2} \hat{T}(x, z, u)\right\} \right] = \tau^{n/2} \E \left[ \exp\left\{-\frac{\tau}{2} \hat{T}(x, z, u)\right\} \right] = \tau^{n/2} \exp\left\{-\frac{\tau}{2}\mu(u) + \frac{\tau^2}{8} k(u, u)\right\}\]
 where the final equality follows from the form of the Gaussian moment generating function (MGF). Therefore, an alternative to the re-sampling MCMC approach described above is to use the posterior approximation
-\[p(u, \tau|z) \propto \tau^{n/2} \exp\left\{-\frac{\tau}{2}\mu(u) + \frac{\tau^2}{8} k(u, u)\right\}p(u, \tau)\]
-where the righthand side may now be evaluated directly to calculate the MH ratio, as the interpolation uncertainty is now baked in to this closed-form expression. Note that based on my definition of the GP in earlier sections I should really be writing $\mu(x, z, u)$ and $k((x, z, u), (x, z, u))$, but I am essentially treating $x$ and $z$ as given above and focusing attention on $u$. 
+\begin{align*}
+p(u, \tau|z) &\propto \tau^{n/2} \exp\left\{-\frac{\tau}{2}\mu(u) + \frac{\tau^2}{8} k(u, u)\right\}p(u, \tau) \\
+		 &=  \tau^{n/2} \exp\left\{-\frac{\tau}{2}\left[\mu(u) - \frac{\tau}{4} k(u, u) \right]\right\}p(u, \tau)
+\end{align*}
+where the righthand side may now be evaluated directly to calculate the MH ratio, as the interpolation uncertainty is now baked into this closed-form expression. Note that based on my definition of the GP in earlier sections I should really be writing $\mu(x, z, u)$ and $k((x, z, u), (x, z, u))$, but I am essentially treating $x$ and $z$ as given above and focusing attention on $u$. Also note that when the variance is 0 ($k(u, u) = 0$) then 
+the likelihood is calculated using the predictive mean of the GP, which corresponds to parameter values $u$ in the design matrix; that is, parameters on which the full simulation was run. Moreover, if the precision $\tau$
+is low (i.e. the noise around the simulation predictions is high) then the $\frac{\tau^2}{8} k(u, u)$ term will be small, reflecting the fact that the GP approximation has more ``leeway'' given the underlying noisy process. 
 
 \subsubsection{Comparing to the ``fully Bayesian'' approach}
 It would be interesting to compare the current approach to the fully Bayesian approach. This would especially be true for the Laplace likelihood, as it would allow sampling of 
